# pandemic_sim

./: .gitignore  Build.sh  CMakeLists.txt  README.md  main.cc
Headers/: Config.hh  ImageGenerator.hh  ProgramInfoViewer.hh  RandomWalkModel.hh
docs/: Features.md
include/: helpers.hpp
include/cli/: cli_argument_parser.hpp
include/cli_argument_parser/: CliArgumentParser.hpp
include/facades/: DirectoryHandler.hpp  JsonParser.hpp  Multithreading.hpp  config.hpp  fs_handler.hpp  info_viwer.hpp  json_parser.hpp  multithread_controller.hpp
include/image_generator/: ImageGenerator.hpp
include/pandemic_sim/cli/: argtype.hpp  clioption.hpp  cliparser.hpp
include/pandemic_sim/simulator/: random_number_generator.hpp
include/presenters/: ProgramInfoViwer.hpp
include/rng/: RandomNumberGenerator.hpp  random_number_generator.hpp
include/simulator/: Config.hpp  Individual.hpp  RandomWalkModel.hpp  RandomWalkModelParallel.hpp  individual.hpp  random_walk_model.hpp  random_walk_simulator_parallel.hpp
include/visual_generator/: image_generator_impl.hpp
src/: main.cc  main.cpp
src/Headers/: Config.hh  DefaultParams.hh  DirectoryHandler.hh  GifGenerator.hh  ImageGenerator.hh  Individual.hh  ProgramInfoViewer.hh  RandomNumberGenerator.hh  RandomWalkModel.hh  RandomWalkModelParallel.hh  State.hh
src/cli/: cli_argument_parser_impl.cpp  cliparser_impl.cpp
src/cli_argument_parser/: CliArgumentParser.cpp
src/facades/: DirectoryHandler.hpp  JsonParser.cpp  Mutithreading.cpp  config_impl.cpp  config_impl.hpp  fs_handler_impl.cpp  info_viwer_impl.cpp  json_parser_impl.cpp  multithread_controller_impl.cpp
src/image_generator/: ImageGenerator.cpp
src/presenters/: ProgramInfoViwer.cpp
src/rng/: RandomNumberGenerator.cpp  random_number_generator_impl.cpp
src/simulator/: Config.cpp  Individual.cpp  RandomWalkModel.cpp  RandomWalkModelParallel.cpp  individual_impl.cpp  random_walk_generator_impl.cpp  random_walk_model_impl.cpp  random_walk_simulator_parallel_impl.cpp
src/visual_generator/: image_generator.cpp
tests/: CMakeLists.txt
tests/sample_data/: json_config_file_example.json  json_parser_example_file.json
tests/unit/: test_cliparser.cpp  test_config.cpp  test_fs_handler.cpp  test_json_parser.cpp  test_random_number_generator.cpp  test_random_walk_model.cpp
